hphp/test/slow/ir_inlining/recurse.php.expectf
HipHop Fatal error: Stack overflow in %s/test/slow/ir_inlining/recurse.php on line 5
